tests/fail/unset_error.stderr
error[E0410]: Use of unset variable or member 'x'
 --> tests/fail/unset_error.tk:5:14
  |
 5 |     auto y = x; 
  |              ^
error[E0410]: Use of unset variable or member 'x'
 --> tests/fail/unset_error.tk:5:14
  |
 5 |     auto y = x; 
  |              ^
